# AdventOfCode

./: AdventOfCode.sln
2021/AdventOfCode/: AocSolution.cs
2022/: Cargo.toml
2022/advent_of_code/: Cargo.toml
2022/advent_of_code/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
2022/src/: main.rs
2022/src/days/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day3.rs  day5.rs  day8.rs  day9.rs
2023/: AdventOfCode.sln
2023/AdventOfCode/: AdventOfCode.fsproj  Program.fs
2023/AdventOfCode/Days/: Day1.fs  Day2.fs  Day3.fs
2023/AdventOfCode/Utils/: Grid.fs
2023/TotallyFSharpHelperLibrary/: Grid.cs
2024/: .gitignore  AdventOfCode2024.sln
2024/AdventOfCode2024/: AdventOfCode2024.csproj  Grid.cs  IntVector2.cs  Program.cs  Utils.cs
2025/: Cargo.toml
2025/src/: highlight_part.rs  main.rs
2025/src/days/: day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
AdventOfCode/: AdventOfCode.csproj  AocSolution.cs  Extensions.cs  Grid.cs  Program.cs
AdventOfCode/Day02/: Dive.cs
AdventOfCode/Day05/: HydrothermalVenture.cs
AdventOfCode/Day07/: TheTreacheryOfWhales.cs
AdventOfCode/Day08/: SevenSegmentSearch.cs
AdventOfCode/Day09/: SmokeBasin.cs
AdventOfCode/Day10/: SyntaxScoring.cs
AdventOfCode/Day11/: DumboOctopus.cs
AdventOfCode/Day12/: PassagePathing.cs
AdventOfCode/Day13/: TransparentOrigami.cs
AdventOfCode/Day15/: Chiton.cs
AdventOfCode/Day16/: PacketDecoder.cs
common/rust/: .gitignore
(+69 files in other folders)
