[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
common = { path = "../common/rust" }
good_lp = { version = "1.14.2", features = ["microlp"], default-features = false }
priority-queue = "2.7.0"
scan_fmt = "0.2.6"
